src/de/2.0/introduction/index.md
# Einführung

[UnoPim](https://unopim.com/) ist ein Open-Source-System für das Product Information Management (PIM), das auf dem **Laravel 12**-Framework basiert und **PHP 8.3** erfordert. Es hilft Unternehmen, ihre Produktinformationen in einem zentralen Repository zu organisieren, zu verwalten und anzureichern.

## Funktionen

**1) Zentralisierte Produktverwaltung-**
Verwalten Sie alle Ihre Produktdaten an einem Ort mit Unterstützung für einfache und konfigurierbare Produkttypen.

**2) Datenanreicherung-**
Verbessern Sie Ihre Produktinformationen mit detaillierten Attributen, einschließlich Unterstützung für 12 Datentypen und Swatch-Typen für visuelle Attributoptionen.

**3) Kategorieverwaltung-**
Organisieren Sie Produkte in Kategorien für eine einfachere Navigation, mit anpassbaren Kategoriefeldern.

**4) Benutzerverwaltung-**
Kontrollieren Sie Benutzerzugriff und Berechtigungen mit rollenbasierter Zugriffskontrolle.

**5) API-Integration-**
Nahtlose Integration mit anderen Systemen über RESTful-APIs mit OAuth 2.0-Authentifizierung.

**6) Lokalisierung-**
Unterstützung für mehrere Sprachen und Lokalisierungen mit automatischer KI-gestützter Übersetzung.

**7) Import-/Exportfunktion-**
Importieren und exportieren Sie Produktdaten einfach im CSV-, XLS- und XLSX-Format, mit Drag-and-Drop-Datei-Upload, Echtzeit-Job-Tracking sowie Pause-/Wiederaufnahme-/Abbruchsteuerung.

**8) Magic AI für die Generierung von Produktinhalten-**
Generieren Sie automatisch ansprechende Produktinhalte mit fortschrittlicher LLM-Technologie und Unterstützung für mehr als 10 KI-Anbieter, darunter OpenAI, Gemini, Anthropic, Ollama und Groq.

**9) Multi-Channel-Unterstützung-**
Verwalten und verteilen Sie Ihre Produktdaten über mehrere Vertriebskanäle von einer einzigen Plattform aus.

**10) AI Agent Chat-**
Interagieren Sie mit Ihrem PIM in natürlicher Sprache über die AI-Agent-Chat-Oberfläche mit über 30 integrierten PIM-Tools für Produktverwaltung, Datenqualität und Massenoperationen.

**11) Produktvollständigkeit-**
Überwachen Sie die Datenqualität mit Produktvollständigkeits-Scoring, das verfolgt, wie viele erforderliche Informationen pro Kanal und Locale ausgefüllt wurden.

**12) Benachrichtigungen-**
Bleiben Sie mit In-App- und E-Mail-Benachrichtigungen über Import-/Exportaufträge, Produktänderungen und Systemereignisse informiert.

**13) Webhooks-**
Automatisieren Sie Workflows mit Produktaktualisierungs-Webhooks, die HTTP-Callbacks auslösen, wenn sich Produktdaten ändern.

**14) Verbessertes Dashboard-**
Erhalten Sie einen umfassenden Überblick über Ihren Katalog mit Widgets für Produktstatistiken, Aktivitätsdiagramme, Vollständigkeitswerte, Kanalbereitschaft und kürzliche Vorgänge.

**15) Produkt-Massenbearbeitung-**
Bearbeiten Sie mehrere Produkte auf einmal, indem Sie sie im Datagrid auswählen und Massenänderungen auf gemeinsame Attribute anwenden.

**16) PostgreSQL-Unterstützung-**
Volle Unterstützung für PostgreSQL-Datenbanken zusätzlich zu MySQL für verbesserte datenbankübergreifende Kompatibilität.
